Changed it up big time, added 2nd and 3rd pages w/AWESOME tabs

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -7,3 +7,18 @@
 .me {
 	border-radius: 50%;
 }
+.brand {
+	height: 55px;
+	width: 61;
+	padding-bottom: 10px;
+	padding-top: 4px;
+}
+.no-marg {
+	margin: 0;
+}
+ul.tabs li.tab a {
+	color: #039be5;
+}
+ul.tabs li.tab a:hover {
+	color: #fb8c00;
+}
