--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -13,9 +13,25 @@
   border-radius: 50%;
 }
 
+/* line 10, ../sass/custom.scss */
 .brand {
-	height: 55px;
-	width: 65;
-	padding-bottom: 10px;
-	padding-top: 4px;
+  height: 55px;
+  width: 61;
+  padding-bottom: 10px;
+  padding-top: 4px;
+}
+
+/* line 16, ../sass/custom.scss */
+.no-marg {
+  margin: 0;
+}
+
+/* line 19, ../sass/custom.scss */
+ul.tabs li.tab a {
+  color: #039be5;
+}
+
+/* line 22, ../sass/custom.scss */
+ul.tabs li.tab a:hover {
+  color: #fb8c00;
 }
