--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,52 +1,70 @@
-$default-color: #00bcd4; 
-$card-padding: 8px;
+$default-color: #00bcd4 !default; 
+$card-padding: 16px !default;
+$footer-font-color: #000 !default;
 $card-color: #FFF;
 $font-color: #fff;
 $footer-font-color: #000;
 $card-link-color: #ffab2e;
 $card-link-hover: #ffcc35;
 
-.card {
+.card-panel {
+  padding: 1rem;
+  margin: 8px 0;
   @include border-radius(2px);
-	margin-top: 10px;
+  @extend .z-depth-1;
+}
+
+.card {
+  margin-top: 10px;
+  @include box-sizing(border-box);
+  @include border-radius(2px);
+    margin-top: 10px;
+
   h1 {
     font-size: 1.71rem;
-		color: $font-color;
+    color: $font-color;
   }
   h2 {
     font-size: 1.14rem;
-		color: $font-color;
+    color: $font-color;
   }
   h3 {
     font-size: 1rem;
-		color: $font-color;
+    color: $font-color;
   }
-	p {
-		font-size: 0.8rem;
-		color: $font-color;
-	}
+  p {
+    font-size: 0.8rem;
+    color: $font-color;
+  }
+
+  span.card-title {
+    color: #fff;
+    font-size: 24px;
+    font-weight: 300;
+  }
   @extend .z-depth-1;
 
 
-  .card-content {
+  &.small {
+    height: 300px;
     position: relative;
-    overflow: hidden;
-    padding: $gutter-width;
 
-    // Image background for content
-    img {
-      @include border-radius(2px 2px 0 0);
+    .card-image {
+      overflow: hidden;
+      height: 150px;
+    }
+    .card-content {
+      overflow: hidden;
+      height: 150px;
+    }
+    .card-action {
       position: absolute;
+      bottom: 0;
       left: 0;
       right: 0;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      z-index: -1;
     }
   }
-
-  .card-footer {
+    .card-footer {
     background-color: $card-color;
     padding: 2px $gutter-width $card-padding $gutter-width;
     @include border-radius(0 0 2px 2px);
@@ -56,11 +74,55 @@ $card-link-hover: #ffcc35;
     }
   }
 
-  a.card-action {
-    margin-right:20%;
-    color: $card-link-color;
-    
-    &:hover { color: $card-link-hover; }
+  .card-image {
+    position: relative;
+    overflow: hidden;
+
+    // Image background for content
+    img {
+      @include border-radius(2px 2px 0 0);
+      position: relative;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      z-index: -1;
+    }
+
+    span.card-title {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: $card-padding;
+    }
+
   }
 
-}
+  .card-content {
+    padding: $card-padding;
+    @include border-radius(0 0 2px 2px);
+    @include box-sizing(border-box);
+
+    p {
+      margin: 0;
+      color: inherit;
+    }
+    span.card-title {
+      line-height: 48px;
+    }
+  }
+
+  .card-action {
+    border-top: 1px solid rgba(160,160,160,.2);
+    padding: $card-padding;
+
+    a {
+      color: color("orange", "accent-2");
+      margin-right: $card-padding;
+      @include transition(color .3s ease);
+      text-transform: uppercase;
+
+      }
+    }
+  }
