--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -12,17 +12,45 @@ nav ul li:hover {
 .me {
 	border-radius: 50%;
 }
+#footer p.foot {
+	line-height: 25px;
+	font-size: 15px;
+	font-weight: 400;
+	a.m {
+		line-height: 25px;
+		color: $orange;
+	}
+}
 .brand {
 	height: 55px;
 	width: 61;
 	padding-bottom: 10px;
 	padding-top: 4px;
 }
+
+@media (max-width: 485px) {
+	.brand {
+		height: 45px;
+		width: 45px;
+		padding-top: 5px;
+	}
+}
+.twitter-row {
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
+}
 .no-marg {
 	margin: 0;
 }
 .no-pad {
 	padding: 0;
+}
+#tabz .no-pad {
+	padding: 0;
+}
+.ft-btn {
+	padding-right: 17px;
+	padding-left: 17px;
 }
 ul.tabs {
 	li.tab a {
@@ -39,4 +67,29 @@ ul.tabs {
 }
 .card-footer p {
 	font-size: 15px;
+}
+// Query to get rid of tabs at certain width until i can figure out
+// how to make them do it by themselves.
+@media (max-width: 450px) {
+	#tabz {
+		display: none;
+	}
+	#tab1,
+	#tab2,
+	#tab3,
+	#tab4 {
+		display: block !important;
+	}
+}
+.right {
+	text-align: right;
+}
+.left {
+	text-align: left;
+}
+@media (max-width: 768px) {
+	.left,
+	.right {
+		text-align: center;
+	}
 }
