--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -1,11 +1,14 @@
 .dropdown-content {
+  display:none;
   @extend .z-depth-1;
   position: absolute;
   background-color: #FFFFFF;
   margin: 0px;
   min-width: 100px;
+  z-index: 1000;
   
   li {
+    cursor: pointer;
     font-size: 1.2rem;
     color: $off-black;
     padding: 1rem 1rem;
