--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,8 +1,10 @@
 nav {
   color: #fff;
   @extend .z-depth-1;
-  @extend .red.lighten-2;
+  background-color: color("materialize-red", "lighten-2");
   width: 100%;
+  height: 56px;
+  line-height: 56px;
 
   .nav-wrapper {
     position: relative;
@@ -13,10 +15,15 @@ nav {
 
   a.button-collapse {
     float: left;
-    font-size: 2.7rem;
-    @extend .show-on-med-and-below;
+    @extend .hide-on-large-only;
     position: relative;
     z-index: 1;
+
+    i {
+      font-size: 2.7rem;
+      height: 56px;
+      line-height: 56px;
+    }
   }
 
   .brand-logo {
@@ -27,8 +34,7 @@ nav {
     padding: 0;
     
     @media #{$medium-and-down} {
-//      position: absolute;
-//      right: 0;
+      left: 0;
       width: 100%;
       text-align: center;
       z-index: 0;
@@ -50,14 +56,14 @@ nav {
       @include transition(background-color .3s);
 
       &:hover, &.active {
-        @extend .red.lighten-1;
+        background-color: rgba(0,0,0,.1);
       }
     }
     a { 
       font-size: 1rem;
       color: #fff; 
       display: block;
-      padding: 0px 10px;
+      padding: 0px 15px;
     }
 
     &.left {
@@ -65,17 +71,12 @@ nav {
     }
   }
 }
-
-
-@media #{$small-and-up} {
-  nav, a.button-collapse i {
-    height: 56px;
-    line-height: 56px;
-  }
-}
 @media #{$medium-and-up} {
-  nav, a.button-collapse i {
+  nav, nav .nav-wrapper i, nav a.button-collapse i {
     height: 64px;
     line-height: 64px;
+  }
+  nav .nav-wrapper i {
+    font-size: 2rem;    
   }
 }
