--- a/sass/components/_sideNav.scss
+++ b/sass/components/_sideNav.scss
@@ -1,19 +1,15 @@
-@media #{$medium-and-down} {
+@media only screen and (max-width: 992px) {
   ul.side-nav {
     position: fixed;
     width: 240px;
     left: -240px;
     top: 0;
-    height: 100%;
+    height: 120%;
     background-color: #FFF;
     z-index: 1000;
-
-    @include transition(left .15s ease-out);
-
-    &.active {
-      left: 0;
-      @include transition(left .3s ease);
-    }
+    @include box-shadow-2(0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15));
+    
+    will-change: left;
 
     li {
       float: none;
@@ -31,6 +27,7 @@
       padding: 0 15px;
 
       &:hover { background-color: #ddd; }
+      .active { background-color: transparent; }
     }
     a {
       color: #444;
@@ -39,9 +36,13 @@
 }
 
 #sidenav-overlay {
-  position:fixed;
+  position:absolute;
   top:0px;
   left:0px;
+  right:0px;
+  bottom:0px;
   background-color: rgba(0,0,0,.5);
   z-index: 999;
+  
+  will-change: opacity;
 }
