--- a/sass/components/_table_of_contents.scss
+++ b/sass/components/_table_of_contents.scss
@@ -1,25 +1,33 @@
 /***************
-    Nav List 
+    Nav List
 ***************/
 ul.table-of-contents {
   &.fixed {
       position: fixed;
-      top: 0px;
     }
 
   li {
+    padding: 2px 0;
   }
   a {
+    display: inline-block;
+    font-weight: 300;
     color: #757575;
-    
+    padding-left: 20px;
+    height: 1.5rem;
+    line-height: 1.5rem;
+    letter-spacing: .4;
+    display: inline-block;
+
     &:hover {
       color: lighten(#757575, 20%);
-      padding-right: 10px;
-      border-right: 1px solid lighten($red,10%);
+      padding-left: 19px;
+      border-left: 1px solid lighten(color("materialize-red", "base"),10%);
     }
     &.active {
-      padding-right: 10px;
-      border-right: 4px solid lighten($red,10%);
+      font-weight: 500;
+      padding-left: 18px;
+      border-left: 2px solid lighten(color("materialize-red", "base"),10%);
     }
   }
 }
