--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -7,7 +7,7 @@ ul.tabs {
   white-space: nowrap;
 
   li.tab {
-    @media only screen and (min-width: $large-screen) {
+    @media #{$large-and-up} {
       max-width: 25%; 
     }
     
@@ -24,13 +24,13 @@ ul.tabs {
     width: 15%;
 
     a {
-      color: lighten($red, 18%);
+      color: lighten(color("materialize-red", "base"), 18%);
       display: block;
       width: 100%;
       height: 100%;
       @include transition( color .28s ease);
       &:hover {
-        @extend .red-text.lighten-4;
+        color: color("materialize-red", "lighten-4");
       }
     }
   }
@@ -38,10 +38,9 @@ ul.tabs {
     position: absolute;
     bottom: 0;
     height: 2px;
-    @extend .red.lighten-2; 
+    background-color: color("materialize-red", "lighten-2");
   }
 }
 
-@media #{$small-and-up} {
-  ul.tabs li.tab { padding: 0; }
-}
+ul.tabs li.tab { padding: 0; }
+
