--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -1,5 +1,4 @@
-$off-black: #212121;
-
+$off-black: #212121 !default;
 
 a {
   text-decoration: none;
@@ -26,31 +25,29 @@ html{
     color: $off-black;
 }
 h1, h2, h3, h4, h5, h6 {
-		color: $off-black;
-		font-family: "Roboto", sans-serif;
-		font-weight: 400;
-        text-rendering: optimizeLegibility;
-		}
+	font-weight: 400;
+}
 		
 // Header Styles
-$h1-fontsize: 4.1rem;
-$h2-fontsize: 3.21rem;
-$h3-fontsize: 2.42rem;
-$h4-fontsize: 1.71rem;
-$h5-fontsize: 1.42rem;
+$h1-fontsize: 4.2rem;
+$h2-fontsize: 3.56rem;
+$h3-fontsize: 2.92rem;
+$h4-fontsize: 2.28rem;
+$h5-fontsize: 1.64rem;
 $h6-fontsize: 1rem;
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-h1 { font-size: $h1-fontsize; line-height: 1.1*$h1-fontsize; margin: .25rem 0 .7rem 0; letter-spacing: -0.1rem}
-h2 { font-size: $h2-fontsize; line-height: 1.1*$h2-fontsize; margin: .25rem 0 .7rem 0; }
-h3 { font-size: $h3-fontsize; line-height: 1.1*$h3-fontsize; margin: .25rem 0 .7rem 0; }
-h4 { font-size: $h4-fontsize; line-height: 1.1*$h4-fontsize; margin: .25rem 0 .7rem 0; letter-spacing: .05rem}
-h5 { font-size: $h5-fontsize; line-height: 1.1*$h5-fontsize; margin: .25rem 0 .7rem 0; letter-spacing: .05rem}
-h6 { font-size: $h6-fontsize; line-height: 1.1*$h6-fontsize; margin: .25rem 0 .7rem 0; letter-spacing: .03rem}
+h1 { font-size: $h1-fontsize; line-height: 1.1*$h1-fontsize; margin: ($h1-fontsize / 2) 0 ($h1-fontsize / 2.5) 0;}
+h2 { font-size: $h2-fontsize; line-height: 1.1*$h2-fontsize; margin: ($h2-fontsize / 2) 0 ($h2-fontsize / 2.5) 0;}
+h3 { font-size: $h3-fontsize; line-height: 1.1*$h3-fontsize; margin: ($h3-fontsize / 2) 0 ($h3-fontsize / 2.5) 0;}
+h4 { font-size: $h4-fontsize; line-height: 1.1*$h4-fontsize; margin: ($h4-fontsize / 2) 0 ($h4-fontsize / 2.5) 0;}
+h5 { font-size: $h5-fontsize; line-height: 1.1*$h5-fontsize; margin: ($h5-fontsize / 2) 0 ($h5-fontsize / 2.5) 0;}
+h6 { font-size: $h6-fontsize; line-height: 1.1*$h6-fontsize; margin: ($h6-fontsize / 2) 0 ($h6-fontsize / 2.5) 0;}
 
 // Text Styles
 em { font-style: italic; }
-strong { font-weight: bold; color: $off-black; }
+strong { font-weight: 500; }
 small { font-size: 75%; }
+.light { font-weight: 300; }
 
 .flow-text{
   $range : $large-screen - $small-screen;
