--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,12 +1,34 @@
 $default-color: #00bcd4 !default; 
 $card-padding: 16px !default;
 $footer-font-color: #000 !default;
+$card-color: #FFF;
+$font-color: #fff;
+$footer-font-color: #000;
+$card-link-color: #ffab2e;
+$card-link-hover: #ffcc35;
 
 .card-panel {
   padding: 1rem;
   margin: 8px 0;
   @include border-radius(2px);
   @extend .z-depth-1;
+
+  h1 {
+    font-size: 1.71rem;
+    color: $font-color;
+  }
+  h2 {
+    font-size: 1.14rem;
+    color: $font-color;
+  }
+  h3 {
+    font-size: 1rem;
+    color: $font-color;
+  }
+  p {
+    font-size: 0.8rem;
+    color: $font-color;
+  }
 }
 
 .card {
@@ -99,3 +121,12 @@ $footer-font-color: #000 !default;
 
 
 }
+    .card-footer {
+    background-color: $card-color;
+    padding: 2px $gutter-width $card-padding $gutter-width;
+    @include border-radius(0 0 2px 2px);
+    margin-bottom:30px;
+    h1, h2, h3, p {
+      color: $footer-font-color;
+    }
+  }
