--- a/sass/materialize.scss
+++ b/sass/materialize.scss
@@ -8,9 +8,9 @@
 @import "components/normalize";
 
 // components
+@import "components/color";
 @import "components/global";
 @import "components/icons-material-design";
-@import "components/color";
 @import "components/grid";
 @import "components/navbar";
 @import "components/roboto";
@@ -28,3 +28,4 @@
 @import "components/form";
 @import "components/table_of_contents";
 @import "components/sideNav";
+@import "components/preloader";
