Small picky things

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -16,7 +16,7 @@ nav ul li:hover {
   font-weight: 400; }
   #footer p.foot a.m {
     line-height: 25px;
-    color: #e68900; }
+    color: #ffb74d; }
 
 .brand {
   height: 55px;
