--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -3,7 +3,8 @@ $lt-blue: #1e88e5;
 $grey: #727272;
 
 .medium {
-	font-size: 50px;
+	font-size: 36px;
+	margin-left: 6px;
 }
 .my-grey {
 	background-color: $grey !important;
@@ -30,8 +31,8 @@ nav ul li:hover {
 	}
 }
 #twitter {
-	width: 50px;
-	height: 41px;
+	width: 35px;
+	height: 28px;
 }
 .brand {
 	height: 50px;
@@ -110,7 +111,7 @@ ul.tabs {
 	}
 }
 .in {
-	height: 41px;
+	height: 29px;
 	margin-left: 10px;
 }
 .card { 
