--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,5 +1,5 @@
 $orange: #FF9800;
-$lt-blue: #1e88e5;
+$lt-blue: #03a9f4;
 $grey: #727272;
 
 .medium {
@@ -78,6 +78,9 @@ ul.tabs {
 	.indicator {
 	background-color: $orange;
 	}
+	li.tab a.active {
+		color: $orange;
+	}
 }
 .card-footer p {
 	font-size: 15px;
@@ -85,6 +88,12 @@ ul.tabs {
 .card-action {
 	color: $orange !important;
 }
+	#tab1 .active,
+	#tab2 .active,
+	#tab3 .active,
+	a#tab4:active {
+		color: $orange;
+	}
 // Query to get rid of tabs at certain width until i can figure out
 // how to make them do it by themselves.
 @media (max-width: 450px) {
@@ -158,4 +167,26 @@ img.memeify {
 }
 .wide {
 	width: 100%;
+}
+.input-field input[type=email]:valid {
+	border-bottom: 1px solid #9e9e9e;
+	box-shadow: none;
+}
+.input-field input[type=text]:valid {
+	border-bottom: 1px solid #9e9e9e;
+	box-shadow: none;
+}
+form .input-field {
+	margin-top: 10px;
+}
+input[type=text]:focus {
+	border-bottom: 1px solid $orange !important;
+	box-shadow: 0 1px 0 0 $orange !important;
+}
+input[type=email]:focus {
+	border-bottom: 1px solid $orange !important;
+	box-shadow: 0 1px 0 0 $orange !important;
+}
+.hide {
+	display: none;
 }
