--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -64,12 +64,20 @@ ul.tabs li.tab a:hover {
   color: #FF9800; }
 ul.tabs .indicator {
   background-color: #FF9800; }
+ul.tabs li.tab a.active {
+  color: #FF9800; }
 
 .card-footer p {
   font-size: 15px; }
 
 .card-action {
   color: #FF9800 !important; }
+
+#tab1 .active,
+#tab2 .active,
+#tab3 .active,
+a#tab4:active {
+  color: #FF9800; }
 
 @media (max-width: 450px) {
   #tabz {
@@ -130,3 +138,25 @@ img.memeify {
 
 .wide {
   width: 100%; }
+
+.input-field input[type=email]:valid {
+  border-bottom: 1px solid #9e9e9e;
+  box-shadow: none; }
+
+.input-field input[type=text]:valid {
+  border-bottom: 1px solid #9e9e9e;
+  box-shadow: none; }
+
+form .input-field {
+  margin-top: 10px; }
+
+input[type=text]:focus {
+  border-bottom: 1px solid #FF9800 !important;
+  box-shadow: 0 1px 0 0 #FF9800 !important; }
+
+input[type=email]:focus {
+  border-bottom: 1px solid #FF9800 !important;
+  box-shadow: 0 1px 0 0 #FF9800 !important; }
+
+.hide {
+  display: none; }
