re-gen with blog now

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -184,3 +184,10 @@ input[type=email]:focus {
 .hide {
 	display: none;
 }
+// Blog page styles 
+#blog {
+	p {
+		margin: 10px 0;
+		font-size: 16px;
+	}
+}
