--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -10,17 +10,16 @@ $grey: #727272;
 	background-color: $grey !important;
 }
 nav {
-	// @media (max-width: 992px) {
-	// 	position: fixed;
-	// 	.section {
-	// 		padding-top: 2rem;
-	// 	}
-	// }
 	ul li:hover {
 		background-color: #64b5f6;
 	}
 }
-
+#buttons {
+	.btn {
+		width: 75px;
+		padding: 0 10px;
+	}
+}
 
 .center {
 	text-align: center;
