--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -8,6 +8,10 @@
 nav ul li:hover {
   background-color: #64b5f6; }
 
+#buttons .btn {
+  width: 75px;
+  padding: 0 10px; }
+
 .center {
   text-align: center; }
 
@@ -92,6 +96,9 @@ ul.tabs li.tab a.active {
   .left,
   .right {
     text-align: center; } }
+@media only screen and (max-width: 450px) {
+  .card-title {
+    font-size: 20px !important; } }
 .in {
   height: 29px;
   margin-left: 10px; }
@@ -106,7 +113,7 @@ ul.tabs li.tab a.active {
 
 img.developer {
   height: auto;
-  width: 45% !important;
+  width: 40% !important;
   float: right;
   z-index: 0 !important; }
 
